--- a/latihan_media_query.html
+++ b/latihan_media_query.html
@@ -26,9 +26,27 @@ c. Ukuran desktop: background color -> hijau + tulisan -> Ini device desktop -->
     }
     .mobile{
         display: none;
+    } 
+
+    /* desktop */
+    @media only screen and (min-width: 769px) and (max-width: 1024px){
+        body{
+        background-color: lightgreen;
+        }
+
+        .desktop{
+            display: block;
+        }
+        .tablet{
+            display: none;
+        }
+        .mobile{
+            display: none;
+        } 
     }
 
-    @media only screen and (min-width: 768px) and (max-width: 1023px) {
+    /* tablets */
+    @media only screen and (min-width: 481px) and (max-width: 768px) {
         body{
             background-color: blue;
         }
@@ -45,7 +63,8 @@ c. Ukuran desktop: background color -> hijau + tulisan -> Ini device desktop -->
         }
     }
 
-    @media only screen and (min-width: 640px) and (max-width: 767px) {
+    /* mobile */
+    @media only screen and (min-width: 320px) and (max-width: 480px) {
         body{
             background-color: red;
         }
