--- a/latihan_responsive_design.html
+++ b/latihan_responsive_design.html
@@ -46,12 +46,12 @@
     <!-- Main Section -->
     <div class="container">
         <div class="row row__main__section">
-            <div class="col-md-6 col-sm-12 col__caption">
+            <div class="col-sm-12 col-md-6 col__caption">
                 <h1>We collaborate, we create, we think outside the box</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, quasi quo! Quaerat, voluptatem similique quo voluptatibus id illum porro cum. Accusamus, quasi quo! Quaerat, voluptatem similique quo voluptatibus id illum porro cum.</p>
                 <a href="#" class="btn btn__create"> Create Account </a>
             </div>
-            <div class="col-md-6 col-sm-12 col__image">
+            <div class="col-sm-12 col-md-6 col__image">
                 <img src="./img/illustrasi.png" alt="gambar 1">
             </div>
         </div>
