--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     
-    <!-- CSS Private -->
+    <!-- Custom CSS  -->
     <link rel="stylesheet" href="style.css">
 
     <title>Latihan Responsive Design</title>
@@ -46,12 +46,12 @@
     <!-- Main Section -->
     <div class="container">
         <div class="row row__main__section">
-            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 col__caption">
+            <div class="col-sm-12 col-lg-6 col__caption">
                 <h1>We collaborate, we create, we think outside the box</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, quasi quo! Quaerat, voluptatem similique quo voluptatibus id illum porro cum. Accusamus, quasi quo! Quaerat, voluptatem similique quo voluptatibus id illum porro cum.</p>
                 <a href="#" class="btn btn__create"> Create Account </a>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 col__image">
+            <div class="col-sm-12 col-lg-6 col__image">
                 <img src="./img/illustrasi.png" alt="gambar 1">
             </div>
         </div>
