Add Button View All Product

--- a/index.html
+++ b/index.html
@@ -208,6 +208,14 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-12 col-lg-4 offset-lg-4">
+                    <div class="view__product">
+                        <a href="#" class="btn__view__product"> View All Products </a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
