--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- End of Explore Our Products Section  -->
 
 
-    <!-- Relate Product -->
+    <!-- Relate Product Section -->
 
     <section class="related__product">
         <div class="container">
@@ -219,8 +219,64 @@
         </div>
     </section>
 
-    <!-- End of Relate Product -->
+    <!-- End of Relate Product Section -->
 
+
+    <!-- Get Offers Section -->
+
+    <section class="get__offers">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-7 image__go">
+                    <img src="./assets/space_station.jfif" alt="space station">
+                </div>
+                <div class="col-12 col-lg-5 caption__go">
+                    <h1>What Are Our Products?</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptate. Nihil voluptatem repellendus quam earum similique? Incidunt, natus quia recusandae accusantium fuga nihil sit.</p>
+                    <a href="#" class="btn__go">Get Offers</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- End of Get Offers Section -->
+
+
+    <!-- Reviews Monitoring Section -->
+
+    <section class="reviews__monitoring">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="image__rm">
+                                <img src="./assets/logo_blue.png" alt="logo 2"/>
+                            </div>
+                            <h5 class="card-title">We're Glad You Had A Great Experience!</h5>
+                            <p class="card-text text-muted">Please Write Us Quick Review On One Of The Following Sites</p>
+                            <div class="other__sites">
+                                <a href="#" class="card-link"> Google </a>
+                                <a href="#" class="card-link"> Facebook </a>
+                                <a href="#" class="card-link"> Twitter </a>
+                            </div>
+                            <div class="icon__rm">
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                                <i class="bi bi-star-fill"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- End of Reviews Monitoring Section -->
 
     <!-- Script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
