--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                 <div class="col-12 col-lg-6 col__caption">
                     <h1>Find all your astronomy products with us at the best price</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis exercitationem velit libero aliquam deserunt odio quos impedit.</p>
-                    <a href="#" class="explore__btn text-white"> Explore Products </a>
+                    <div class="explore__ms">
+                        <a href="#" class="btn explore__btn text-white"> Explore Products </a>
+                    </div>
                 </div>
                 <div class="col-12 col-lg-6 col__image">
                     <img src="./assets/Astronout__2.png" alt="Main Image">
@@ -84,7 +86,7 @@
                             <h5 class="card-title">Analyse Your Product</h5>
                             <p class="card-text text-muted">The Passage Experienced A Surge In Popularity During The 1960s When Laterest Used</p>
                             <div class="learn-more">
-                                <a href="#" class="card-link"> Learn More </a>
+                                <a href="#" class="btn card-link"> Learn More </a>
                             </div>
                         </div>
                     </div>
@@ -98,7 +100,7 @@
                             <h5 class="card-title">Product Quality</h5>
                             <p class="card-text text-muted">The Passage Experienced A Surge In Popularity During The 1960s When Laterest Used</p>
                             <div class="learn-more">
-                                <a href="#" class="card-link"> Learn More </a>
+                                <a href="#" class="btn card-link"> Learn More </a>
                             </div>
                         </div>
                     </div>
@@ -112,7 +114,7 @@
                             <h5 class="card-title">Find Best Price</h5>
                             <p class="card-text text-muted">The Passage Experienced A Surge In Popularity During The 1960s When Laterest Used</p>
                             <div class="learn-more">
-                                <a href="#" class="card-link"> Learn More </a>
+                                <a href="#" class="btn card-link"> Learn More </a>
                             </div>
                         </div>
                     </div>
@@ -138,7 +140,7 @@
                             <h5 class="card-title">Luneta Teleskop</h5>
                             <p class="card-text">$10.500.00</p>
                             <div class="buy__now">
-                                <a href="#" class="btn__buy__now"> Buy Now </a>
+                                <a href="#" class="btn btn__buy__now"> Buy Now </a>
                             </div>
                         </div>
                     </div>
@@ -150,7 +152,7 @@
                             <h5 class="card-title">Radar Interferometer</h5>
                             <p class="card-text">$57.500.000.00</p>
                             <div class="buy__now">
-                                <a href="#" class="btn__buy__now"> Buy Now </a>
+                                <a href="#" class="btn btn__buy__now"> Buy Now </a>
                             </div>
                         </div>
                     </div>
@@ -162,7 +164,7 @@
                             <h5 class="card-title">Asteroid Detection Satellite</h5>
                             <p class="card-text">$7.499.000.00</p>
                             <div class="buy__now">
-                                <a href="#" class="btn__buy__now"> Buy Now </a>
+                                <a href="#" class="btn btn__buy__now"> Buy Now </a>
                             </div>
                         </div>
                     </div>
@@ -177,7 +179,7 @@
                             <h5 class="card-title">Solar System Book</h5>
                             <p class="card-text">$79.00</p>
                             <div class="buy__now">
-                                <a href="#" class="btn__buy__now"> Buy Now </a>
+                                <a href="#" class="btn btn__buy__now"> Buy Now </a>
                             </div>
                         </div>
                     </div>
@@ -189,7 +191,7 @@
                             <h5 class="card-title">Space Map App</h5>
                             <p class="card-text">$939.00</p>
                             <div class="buy__now">
-                                <a href="#" class="btn__buy__now"> Buy Now </a>
+                                <a href="#" class="btn btn__buy__now"> Buy Now </a>
                             </div>
                         </div>
                     </div>
@@ -201,7 +203,7 @@
                             <h5 class="card-title">Good Alien</h5>
                             <p class="card-text">$1.00</p>
                             <div class="buy__now">
-                                <a href="#" class="btn__buy__now"> Buy Now </a>
+                                <a href="#" class="btn btn__buy__now"> Buy Now </a>
                             </div>
                         </div>
                     </div>
@@ -211,7 +213,7 @@
             <div class="row">
                 <div class="col-12 col-lg-4 offset-lg-4">
                     <div class="view__product">
-                        <a href="#" class="btn__view__product"> View All Products </a>
+                        <a href="#" class="btn btn__view__product"> View All Products </a>
                     </div>
                 </div>
             </div>
@@ -227,13 +229,13 @@
     <section class="get__offers">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-7 image__go">
+                <div class="col-12 col-lg-6 image__go">
                     <img src="./assets/space_station.jfif" alt="space station">
                 </div>
-                <div class="col-12 col-lg-5 caption__go">
+                <div class="col-12 col-lg-6 caption__go">
                     <h1>What Are Our Products?</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, voluptate. Nihil voluptatem repellendus quam earum similique? Incidunt, natus quia recusandae accusantium fuga nihil sit.</p>
-                    <a href="#" class="btn__go">Get Offers</a>
+                    <a href="#" class="btn btn__go">Get Offers</a>
                 </div>
             </div>
         </div>
@@ -246,8 +248,8 @@
 
     <section class="reviews__monitoring">
         <div class="container">
-            <div class="row">
-                <div class="col-12 col-lg-6">
+            <div class="row row__rm">
+                <div class="col-12 col-lg-6 col__card__rm">
                     <div class="card">
                         <div class="card-body">
                             <div class="image__rm">
@@ -256,9 +258,17 @@
                             <h5 class="card-title">We're Glad You Had A Great Experience!</h5>
                             <p class="card-text text-muted">Please Write Us Quick Review On One Of The Following Sites</p>
                             <div class="other__sites">
-                                <a href="#" class="card-link"> Google </a>
-                                <a href="#" class="card-link"> Facebook </a>
-                                <a href="#" class="card-link"> Twitter </a>
+                                <div class="row">
+                                    <div class="col-12 col-md-4">
+                                        <a href="#" class="btn card-link"> Google </a>
+                                    </div>
+                                    <div class="col-12 col-md-4">
+                                        <a href="#" class="btn card-link"> Facebook </a>
+                                    </div>
+                                    <div class="col-12 col-md-4">
+                                        <a href="#" class="btn card-link"> Twitter </a>
+                                    </div>
+                                </div>
                             </div>
                             <div class="icon__rm">
                                 <i class="bi bi-star-fill"></i>
@@ -270,7 +280,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-6 col__caption__mr">
+                    <h1>Reviews Monitoring</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ipsum, neque officiis rem autem, deleniti ullam illum distinctio provident ab sed dolores. Saepe, optio.</p>
                 </div>
             </div>
         </div>
@@ -278,6 +290,73 @@
 
     <!-- End of Reviews Monitoring Section -->
 
+
+    <!-- Submit Form Section -->
+
+    <section class="submit__form">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6 col__caption__sf">
+                    <h1>Submit The Form For Whoops</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum voluptatibus corrupti perferendis minima libero corporis sed doloribus ipsa recusandae quos nostrum ullam molestias.</p>
+                </div>
+                <div class="col-12 col-lg-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <input type="text text-muted" class="form-control" placeholder="Name" >
+                            <input type="text text-muted" class="form-control" placeholder="Email">
+                            <input type="text text-muted" class="form-control" placeholder="Industry">
+                            <input type="text text-muted" class="form-control" placeholder="Your Product">
+                            <div class="submit__class">
+                                <a href="#" class="btn btn__submit"> Submit </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- End of Submit Form Section -->
+
+    <!-- Footer Section -->
+
+    <section class="footer__section">
+        <div class="container">
+            <div class="contact__me">
+                <p>If You Want To Find Out Which Are The Right Influencers
+                    For <br> Your Product Marketing Campaigns Then Follow Us
+                </p>
+            </div>
+            <div class="icon__cm">
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="#"><i class="bi bi-youtube"></i></a>
+                <a href="#"><i class="bi bi-pinterest"></i></a>
+            </div>
+            <div class="nav__bottom">
+                <div class="row">
+                    <div class="col-12 col-lg-2 d-flex justify-content-center">
+                        <a href="#"> Article Details </a>
+                    </div>
+                    <div class="col-12 col-lg-2 d-flex justify-content-center">
+                        <a href="#"> Terms & Condition </a>
+                    </div>
+                    <div class="col-12 col-lg-2 d-flex justify-content-center">
+                        <a href="#"> Privacy Policy </a>
+                    </div>
+                    <div class="col-12 offset-lg-3 col-lg-3 d-flex justify-content-center">
+                        <a href="#"> Copyright <i class="bi bi-bullseye"></i> Whoops</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- End of Footer Section -->
+    
+    
     <!-- Script Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
