--- a/TOPIC_2_HTTP_SERVER/create-server/public/login.html
+++ b/TOPIC_2_HTTP_SERVER/create-server/public/login.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Halaman Home </title>
+    <title>Login Page</title>
 </head>
 <body>
-    
-    <h1>Server berhasil dijalankan!</h1>
-    <a href="/login">Masuk Ke Login</a>
+    <h1>Halaman Login</h1>
+    <a href="/"> Ke Home </a>
 </body>
 </html>
