--- a/public/landing_page.html
+++ b/public/landing_page.html
@@ -87,11 +87,11 @@
 					<h2> Sewa & Rental Mobil Terbaik di kawasan Semarang</h2>
 					<p>Selamat datang di Binar Car Rental. Kami menyediakan mobil kualitas terbaik dengan harga terjangkau. Selalu siap melayani kebutuhanmu untuk sewa mobil selama 24 jam.</p>
 
-					<a href="#" class="btn btn-success">Mulai Sewa Mobil</a>
+					<a href="/search_car.html" class="btn btn-success">Mulai Sewa Mobil</a>
 				</div>
 
 				<div class="col-12 col-md-6 col__image">
-					<img src="images/img_car.png">
+					<img src="/images-landing-page/img_car.png" alt="Image 1">
 				</div>
 			</div>
 		</div>
@@ -103,7 +103,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col__image__service">
-					<img src="img/img_service.png" class="img-responsive">
+					<img src="/images-landing-page/img_service.png" class="img-responsive">
 				</div>
 				<div class="col-md-6 col__service">
 					<h3>Best Car Rental for any kind of trip in Semarang!</h3>
@@ -175,7 +175,7 @@
 			
 			<div class="single-box">
 				<div class="img-area">
-					<img src="./img/undraw_profile.svg" alt="user1">
+					<img src="/images-landing-page/user_profile.png" alt="user1">
 				</div>
 				<div class="text-img">
 					<div class="icon">
@@ -192,7 +192,7 @@
 
 			<div class="single-box">
 				<div class="img-area">
-					<img src="./img/undraw_profile_1.svg" alt="user2">
+					<img src="/images-landing-page/user_profile.png" alt="user2">
 				</div>
 				<div class="text-img">
 					<div class="icon">
@@ -209,7 +209,7 @@
 
 			<div class="single-box">
 				<div class="img-area">
-					<img src="./img/undraw_profile_2.svg" alt="user3">
+					<img src="/images-landing-page/user_profile.png" alt="user3">
 				</div>
 				<div class="text-img">
 					<div class="icon">
