--- a/public/search_car.html
+++ b/public/search_car.html
@@ -102,40 +102,49 @@
 	<!-- Form -->
 
 	<section class="form">
+		<div class="overlay"></div>	
 		<div class="container ct__form">
-			<div class="row row__button">
-				<div class="col-lg-11">
-					<div class="row">
-						<div class="col-12 col-lg-3">
-							<label for="tipe_driver" class="form-label">Tipe Driver</label>
-							<select class="form-select" id="driver_type">
-								<option>Pilih Tipe Sopir</option>
-								<option value="#">Dengan Sopir</option>
-								<option value="#">Tanpa Sopir (Lepas Kunci)</option>
-							</select>
-						</div>
-						<div class="col-12 col-lg-3">
-							<label for="tipe_driver" class="form-label">Tanggal</label>
-							<input type="date" class="form-control" id="date" placeholder="Pilih Tanggal">
-						</div>
-						<div class="col-12 col-lg-3">
-							<label for="tipe_driver" class="form-label">Waktu Jemput/Ambil</label>
-							<input type="time" class="form-control" id="time_pick_up" placeholder="Pilih Waktu">
-						</div>
-						<div class="col-12 col-lg-3">
-							<label for="tipe_driver" class="form-label">Jumlah Penumpang (optional)</label>
-							<input type="text" class="form-control" id="tipe_driver" placeholder="Jumlah Penumpang">
+			<form>
+				<div class="row row__button">
+					<div class="col-lg-11">
+						<div class="row">
+							<div class="col-12 col-lg-3">
+								<label for="driverType" class="form-label">Tipe Driver</label>
+								<select class="form-select" id="driverType">
+									<option>Pilih Tipe Driver</option>
+									<option value="true">Dengan Sopir</option>
+									<option value="false">Tanpa Sopir (Lepas Kunci)</option>
+								</select>
+							</div>
+							<div class="col-12 col-lg-3">
+								<label for="tipe_driver" class="form-label">Tanggal</label>
+								<input type="date" class="form-control" id="dateInput" placeholder="Pilih Tanggal">
+							</div>
+							<div class="col-12 col-lg-3">
+								<label for="tipe_driver" class="form-label">Waktu Jemput/Ambil</label>
+								<input type="time" class="form-control" id="timeInput" placeholder="Pilih Waktu">
+							</div>
+							<div class="col-12 col-lg-3">
+								<label for="tipe_driver" class="form-label">Jumlah Penumpang (optional)</label>
+								<input type="text" class="form-control" id="capacityInput" placeholder="Jumlah Penumpang">
+							</div>
 						</div>
 					</div>
+					<div class="mt-4 col-12 col-lg-1 d-flex justify-content-start">
+						<button class="mt-1 btn btn-success" id="load-btn">Cari</button>
+					</div>
 				</div>
-				<div class="mt-4 col-12 col-lg-1 d-flex justify-content-start">
-					<button type="submit" class="mt-1 btn btn-success" id="search__car">Cari</button>
-				</div>
-			</div>
+			</form>
 		</div>
 	</section>
 
 	<!-- End of Form -->
+	<div id="cars-container"></div>
+	<!-- Get Data Car -->
+
+	
+
+	<!-- End of Get Data Car -->
 
 	<!-- Footer -->
 	<section class="footer" id="Footer">
@@ -177,6 +186,10 @@
 	<!-- Script Owl Carousel -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="js/main.js"></script>
+	<script src="js/binar.js"></script>
+    <script src="js/app.example.js"></script>
+    <script src="js/car.example.js"></script>
+    <script src="js/main.example.js"></script>
 
 </body>
 </html>
