--- a/public/search_car.html
+++ b/public/search_car.html
@@ -104,14 +104,14 @@
 	<section class="form">
 		<div class="overlay"></div>	
 		<div class="container ct__form">
-			<form>
+			<form method="GET" action="">
 				<div class="row row__button">
 					<div class="col-lg-11">
 						<div class="row">
 							<div class="col-12 col-lg-3">
 								<label for="driverType" class="form-label">Tipe Driver</label>
 								<select class="form-select" id="driverType">
-									<option>Pilih Tipe Driver</option>
+									<option hidden>Pilih Tipe Driver</option>
 									<option value="true">Dengan Sopir</option>
 									<option value="false">Tanpa Sopir (Lepas Kunci)</option>
 								</select>
