--- a/public/landing_page.html
+++ b/public/landing_page.html
@@ -91,7 +91,7 @@
 				</div>
 
 				<div class="col-12 col-md-6 col__image">
-					<img src="/images-landing-page/img_car.png" alt="Image 1">
+					<img src="img_custom/img_car.png" alt="Image 1">
 				</div>
 			</div>
 		</div>
@@ -103,7 +103,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col__image__service">
-					<img src="/images-landing-page/img_service.png" class="img-responsive">
+					<img src="img_custom/img_service.png" class="img-responsive">
 				</div>
 				<div class="col-md-6 col__service">
 					<h3>Best Car Rental for any kind of trip in Semarang!</h3>
@@ -175,7 +175,7 @@
 			
 			<div class="single-box">
 				<div class="img-area">
-					<img src="/images-landing-page/user_profile.png" alt="user1">
+					<img src="img_custom/user_profile.png" alt="user1">
 				</div>
 				<div class="text-img">
 					<div class="icon">
@@ -192,7 +192,7 @@
 
 			<div class="single-box">
 				<div class="img-area">
-					<img src="/images-landing-page/user_profile.png" alt="user2">
+					<img src="img_custom/user_profile.png" alt="user2">
 				</div>
 				<div class="text-img">
 					<div class="icon">
@@ -209,7 +209,7 @@
 
 			<div class="single-box">
 				<div class="img-area">
-					<img src="/images-landing-page/user_profile.png" alt="user3">
+					<img src="img_custom/user_profile.png" alt="user3">
 				</div>
 				<div class="text-img">
 					<div class="icon">
@@ -356,7 +356,7 @@
 
 	<!-- Script Owl Carousel -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="js/main.js"></script>
+	<script src="scripts/main.js"></script>
 
 </body>
 </html>
