--- a/public/search_car.html
+++ b/public/search_car.html
@@ -91,7 +91,7 @@
 				</div>
 
 				<div class="col-12 col-md-6 col__image">
-					<img src="/images-landing-page/img_car.png">
+					<img src="img_custom/img_car.png">
 				</div>
 			</div>
 		</div>
@@ -101,7 +101,7 @@
 
 	<!-- Form -->
 
-	<section class="form">
+	<section class="form__section">
 		<div class="container ct__form">
 			<form method="GET" action="">
 				<div class="row row__button">
@@ -116,7 +116,7 @@
 								</select>
 							</div>
 							<div class="col-12 col-lg-3">
-								<label for="dateInput class="form-label">Tanggal</label>
+								<label for="dateInput" class="form-label">Tanggal</label>
 								<input type="date" class="form-control" id="dateInput" placeholder="Pilih Tanggal">
 							</div>
 							<div class="col-12 col-lg-3">
@@ -124,7 +124,7 @@
 								<input type="time" class="form-control" id="timeInput" placeholder="Pilih Waktu">
 							</div>
 							<div class="col-12 col-lg-3">
-								<label for="capacityInput class="form-label">Jumlah Penumpang (optional)</label>
+								<label for="capacityInput" class="form-label">Jumlah Penumpang (optional)</label>
 								<select class="form-select" id="capacityInput">
 									<option hidden>Jumlah Penumpang</option>
 									<option value="1">1 Orang</option>
@@ -143,15 +143,14 @@
 				</div>
 			</form>
 			<!-- End of Form -->
-			<div id="cars-container">
-
-			</div>
-			<!-- Get Data Car -->
 		</div>
 	</section>
 
-	
 
+	<!-- Get Data Car -->
+	<div id="cars-container">
+
+	</div>
 	<!-- End of Get Data Car -->
 
 	<!-- Footer -->
@@ -193,11 +192,11 @@
 
 	<!-- Script Owl Carousel -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<script src="js/main.js"></script>
-	<script src="js/binar.js"></script>
-    <script src="js/app.example.js"></script>
-    <script src="js/car.example.js"></script>
-    <script src="js/main.example.js"></script>
+	<script src="scripts/main.js"></script>
+	<script src="scripts/binar.js"></script>
+    <script src="scripts/app.example.js"></script>
+    <script src="scripts/car.example.js"></script>
+    <script src="scripts/main.example.js"></script>
 
 </body>
 </html>
