--- a/public/search_car.html
+++ b/public/search_car.html
@@ -125,15 +125,7 @@
 							</div>
 							<div class="col-12 col-lg-3">
 								<label for="capacityInput" class="form-label">Jumlah Penumpang (optional)</label>
-								<select class="form-select" id="capacityInput">
-									<option hidden>Jumlah Penumpang</option>
-									<option value="1">1 Orang</option>
-									<option value="2">2 Orang</option>
-									<option value="3">3 Orang</option>
-									<option value="4">4 Orang</option>
-									<option value="5">5 Orang</option>
-									<option value="6">6 Orang</option>
-								</select>
+								<input type="text" class="form-control" id="capacityInput" placeholder="Penumpang">
 							</div>
 						</div>
 					</div>
@@ -144,14 +136,12 @@
 			</form>
 			<!-- End of Form -->
 		</div>
+		<!-- Get Data Car -->
+		<div id="cars-container">
+
+		</div>
+		<!-- End of Get Data Car -->
 	</section>
-
-
-	<!-- Get Data Car -->
-	<div id="cars-container">
-
-	</div>
-	<!-- End of Get Data Car -->
 
 	<!-- Footer -->
 	<section class="footer" id="Footer">
