--- a/public/search_car.html
+++ b/public/search_car.html
@@ -136,12 +136,13 @@
 			</form>
 			<!-- End of Form -->
 		</div>
-		<!-- Get Data Car -->
-		<div id="cars-container">
-
-		</div>
-		<!-- End of Get Data Car -->
 	</section>
+
+	<!-- Get Data Car -->
+	<div id="cars-container">
+
+	</div>
+	<!-- End of Get Data Car -->
 
 	<!-- Footer -->
 	<section class="footer" id="Footer">
@@ -175,6 +176,12 @@
 	</section>
 	<!-- End of Footer -->
 
+	<!-- Script Binar -->
+	<script src="scripts/binar.js"></script>
+    <script src="scripts/app.example.js"></script>
+    <script src="scripts/car.example.js"></script>
+    <script src="scripts/main.example.js"></script>
+
 	<!-- JQuery -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<!-- Script Bootstrap -->
@@ -183,10 +190,6 @@
 	<!-- Script Owl Carousel -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="scripts/main.js"></script>
-	<script src="scripts/binar.js"></script>
-    <script src="scripts/app.example.js"></script>
-    <script src="scripts/car.example.js"></script>
-    <script src="scripts/main.example.js"></script>
 
 </body>
 </html>
