--- a/public/search_car.html
+++ b/public/search_car.html
@@ -125,7 +125,7 @@
 							</div>
 							<div class="col-12 col-lg-3">
 								<label for="capacityInput" class="form-label">Jumlah Penumpang (optional)</label>
-								<input type="text" class="form-control" id="capacityInput" placeholder="Penumpang">
+								<input type="text" class="form-control" id="capacityInput" placeholder="Penumpang" autocomplete="off">
 							</div>
 						</div>
 					</div>
